force-app/main/default/objects/Account/fields/Tipo_de_canal__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_canal__c</fullName>
    <label>Tipo de canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Al Detalle</fullName>
            </value>
            <value>
                <fullName>Distribuidor Autorizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>