force-app/main/default/objects/Account/fields/Tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cliente__c</fullName>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
                <label>Sujeto Obligado Jurídico</label>
            </value>
            <value>
                <fullName>PEP</fullName>
                <label>PEP Natural</label>
            </value>
            <value>
                <fullName>Empresa Estatal</fullName>
            </value>
            <value>
                <fullName>Empresa Privada</fullName>
            </value>
            <value>
                <fullName>Organizaciones sin fines de lucro</fullName>
                <label>OSFL</label>
            </value>
            <value>
                <fullName>Sujeto Obligado</fullName>
                <label>Sujeto Obligado Natural</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>