force-app/main/default/objects/Account/fields/Tipo_de_email__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerencias: Email address, internal address, internet address</inlineHelpText>
    <label>Tipo de email</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipos de eMail</value>
        </filterItems>
        <infoMessage>Sugerencias: Email address, internal address, internet address</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Cuentas (Tipo de email)</relationshipLabel>
    <relationshipName>Cuentas9</relationshipName>
    <type>Lookup</type>
</CustomField>