force-app/main/default/objects/Account/fields/Tipo_de_Indentificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Indentificaci_n__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedula de Identidad</fullName>
            </value>
            <value>
                <fullName>Cedula de Residente</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>DUI</fullName>
            </value>
            <value>
                <fullName>RUC</fullName>
            </value>
            <value>
                <fullName>RUC Extranjero</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Cédula</fullName>
                <isActive>false</isActive>
                <label>Cédula</label>
            </value>
            <value>
                <fullName>Cédula de identidad</fullName>
                <isActive>false</isActive>
                <label>Cédula de identidad</label>
            </value>
            <value>
                <fullName>Cédula de residente</fullName>
                <isActive>false</isActive>
                <label>Cédula de residente</label>
            </value>
            <value>
                <fullName>Dimex</fullName>
                <isActive>false</isActive>
                <label>Dimex</label>
            </value>
            <value>
                <fullName>Otro</fullName>
                <isActive>false</isActive>
                <label>Otro</label>
            </value>
            <value>
                <fullName>RUC_Extranjero</fullName>
                <isActive>false</isActive>
                <label>RUC_Extranjero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>