force-app/main/default/objects/Account/fields/Tipo_de_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Riesgo__c</fullName>
    <formula>IF (Puntaje__c == NULL, &quot;&quot;,
   IF(AND( Puntaje__c &gt;= 0, Puntaje__c &lt;= 2) , &quot;Tolerante&quot;, 
      IF(AND( Puntaje__c &gt;= 3, Puntaje__c &lt;= 4), &quot;Riesgo Bajo&quot;,
         IF(AND( Puntaje__c &gt;= 5, Puntaje__c &lt;= 7), &quot;Riesgo Medio&quot;,
            IF(AND( Puntaje__c &gt;= 8, Puntaje__c &lt;= 10), &quot;Riesgo Medio&quot;, &quot;&quot;)
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Riesgo</label>
    <type>Text</type>
</CustomField>