force-app/main/default/objects/Account/fields/Tipo_de_t_lefono__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_t_lefono__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerencia de opciones, Home, Work, Car o Mobile, FAX, Home - Emergency Contact, Other, Work - Emergency Contact</inlineHelpText>
    <label>Tipo de télefono</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipo de Telefono</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Cuentas (Tipo de télefono)</relationshipLabel>
    <relationshipName>Cuentas5</relationshipName>
    <type>Lookup</type>
</CustomField>