force-app/main/default/objects/Account/fields/TipoBusqueda__c.field-meta.xml
<CustomField>
    <fullName>TipoBusqueda__c</fullName>
    <label>Tipo de búsqueda</label>
    <length>32</length>
    <type>Text</type>
</CustomField>