force-app/main/default/objects/Account/fields/TIPOCLIENTE__c.field-meta.xml
<CustomField>
    <fullName>TIPOCLIENTE__c</fullName>
    <description>El tipo que viene desde pellas</description>
    <label>TIPOCLIENTE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>