force-app/main/default/objects/Account/fields/TipoNegocio__c.field-meta.xml
<CustomField>
    <fullName>TipoNegocio__c</fullName>
    <label>Tipo de negocio</label>
    <length>32</length>
    <type>Text</type>
</CustomField>