force-app/main/default/objects/Account/fields/TipoTelefono__c.field-meta.xml
<CustomField>
    <fullName>TipoTelefono__c</fullName>
    <label>Tipo de teléfono del cliente</label>
    <length>16</length>
    <type>Text</type>
</CustomField>