force-app/main/default/objects/Account/fields/TituloContacto__c.field-meta.xml
<CustomField>
    <fullName>TituloContacto__c</fullName>
    <formula>NombreContacto__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Título del contacto</label>
    <type>Text</type>
</CustomField>