force-app/main/default/objects/Account/fields/TYPEOTHERADRESS__c.field-meta.xml
<CustomField>
    <fullName>TYPEOTHERADRESS__c</fullName>
    <label>TYPEOTHERADRESS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>