force-app/main/default/objects/Account/fields/Unidad_de_negocio_EO__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_negocio_EO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unidad de negocio tomada de la estructura organizacional</description>
    <label>Unidad de negocio</label>
    <referenceTo>Unidad_de_negocio__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>