force-app/main/default/objects/Account/fields/UnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadNegocio__c</fullName>
    <label>Unidad de negocio</label>
    <length>32</length>
    <type>Text</type>
</CustomField>