force-app/main/default/objects/Account/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Usuario que realizó última modificación</label>
    <length>16</length>
    <type>Text</type>
</CustomField>