force-app/main/default/objects/Account/fields/Vencimiento_PEP__c.field-meta.xml
<CustomField>
    <fullName>Vencimiento_PEP__c</fullName>
    <formula>IF(
  AND(
    MONTH( Fecha_inicio_PEP__c ) = 2,
    DAY( Fecha_inicio_PEP__c ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Fecha_inicio_PEP__c ), 400 ) = 0, 
        AND( 
          MOD( YEAR( Fecha_inicio_PEP__c ), 4 ) = 0,
          MOD( YEAR( Fecha_inicio_PEP__c ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Fecha_inicio_PEP__c ) + VALUE($Label.A_os_PEP), 3, 1),
  DATE( YEAR( Fecha_inicio_PEP__c ) + VALUE($Label.A_os_PEP), MONTH( Fecha_inicio_PEP__c ), DAY( Fecha_inicio_PEP__c ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencimiento PEP</label>
    <type>Date</type>
</CustomField>