force-app/main/default/objects/Account/fields/VolumenVentas__c.field-meta.xml
<CustomField>
    <fullName>VolumenVentas__c</fullName>
    <label>Volumen de ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>