force-app/main/default/objects/Account/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona del cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>