force-app/main/default/objects/Account/recordTypes/Juridicos.recordType-meta.xml
<RecordType>
    <fullName>Juridicos</fullName>
    <active>true</active>
    <description>Utilizando para cuentas Jurídicas o de compañías</description>
    <label>Jurídicos</label>
</RecordType>