force-app/main/default/objects/Account/validationRules/Cambios_Cedula.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambios_Cedula</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Cedula__c),
 $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
 OR(
  NOT(CONTAINS(&quot;Aprobado&quot;, Campo_auxiliar_para_cambios__c)),
  ISBLANK(Campo_auxiliar_para_cambios__c)
 )
)</errorConditionFormula>
    <errorDisplayField>Cedula__c</errorDisplayField>
    <errorMessage>Solamente los administradores pueden modificar el campo Identificación.</errorMessage>
</ValidationRule>