force-app/main/default/objects/Account/validationRules/Cambios_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambios_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Name),
 $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
 OR(
  NOT(CONTAINS(&quot;Aprobado&quot;,  Campo_auxiliar_para_cambios__c)),
  ISBLANK(Campo_auxiliar_para_cambios__c)
 )
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Solamente los administradores pueden modificar el campo Nombre.</errorMessage>
</ValidationRule>