force-app/main/default/objects/Account/validationRules/Cambios_PEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambios_PEP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(PEP__c),
PRIORVALUE(PEP__c),
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;
)</errorConditionFormula>
    <errorMessage>No puede modificar el campo PEP</errorMessage>
</ValidationRule>