force-app/main/default/objects/Account/validationRules/Cargo_PEP_Familiar_no_requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Cargo_PEP_Familiar_no_requerido</fullName>
    <active>true</active>
    <description>Si no tiene familiar PEP, entonces el cargo no debe llenarse</description>
    <errorConditionFormula>AND(
 NOT( Algun_familiar_es_PEP__c ),
 NOT( ISBLANK( Cargo_PEP_del_familiar__c ) )
)</errorConditionFormula>
    <errorDisplayField>Algun_familiar_es_PEP__c</errorDisplayField>
    <errorMessage>Si no tiene familiar PEP, entonces el cargo no debe llenarse</errorMessage>
</ValidationRule>