force-app/main/default/objects/Account/validationRules/Cliente_PEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_PEP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  PEP__c,
  ISBLANK(Cargo_PEP__c)
)</errorConditionFormula>
    <errorDisplayField>Cargo_PEP__c</errorDisplayField>
    <errorMessage>Si el cliente es PEP, debe llenar el cargo</errorMessage>
</ValidationRule>