force-app/main/default/objects/Account/validationRules/Digitos_del_telefono.validationRule-meta.xml
<ValidationRule>
    <fullName>Digitos_del_telefono</fullName>
    <active>true</active>
    <description>Números de teléfonos deben de ser 8 números</description>
    <errorConditionFormula>AND (
NOT(ISBLANK(Phone)),
LEN(Phone) &lt; 8
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>El número de teléfono debe de contene al menos 8 números.</errorMessage>
</ValidationRule>