force-app/main/default/objects/Account/validationRules/Fecha_de_inicio_PEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_inicio_PEP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PEP__c = True, ISNULL( Fecha_inicio_PEP__c ) )</errorConditionFormula>
    <errorDisplayField>Fecha_inicio_PEP__c</errorDisplayField>
    <errorMessage>Debe indicar una fecha de inicio para el PEP</errorMessage>
</ValidationRule>