force-app/main/default/objects/Account/validationRules/Identificacion_es_un_campo_requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Identificacion_es_un_campo_requerido</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 ISBLANK(NRC__c ),
 ISBLANK(Cedula__c),
 ISBLANK(Campo_auxiliar_para_cambios__c)
)</errorConditionFormula>
    <errorDisplayField>Cedula__c</errorDisplayField>
    <errorMessage>El campo Identificación es obligatorio.</errorMessage>
</ValidationRule>