force-app/main/default/objects/Account/validationRules/PEP_Familiar.validationRule-meta.xml
<ValidationRule>
    <fullName>PEP_Familiar</fullName>
    <active>true</active>
    <description>Llenar el campo de cargo si el PEP famiiar está marcado</description>
    <errorConditionFormula>AND(
 Algun_familiar_es_PEP__c ,
 ISBLANK(Cargo_PEP_del_familiar__c)
)</errorConditionFormula>
    <errorDisplayField>Cargo_PEP_del_familiar__c</errorDisplayField>
    <errorMessage>Si el familiar es PEP, debe de competar el campo del cargo PEP del familiar</errorMessage>
</ValidationRule>