force-app/main/default/objects/Account/validationRules/Primer_nombre.validationRule-meta.xml
<ValidationRule>
    <fullName>Primer_nombre</fullName>
    <active>true</active>
    <description>El primer nombre debe ser obligatorio</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;PersonAccount&apos;,
ISBLANK( FirstName )
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>El primer nombre es obligatorio</errorMessage>
</ValidationRule>