force-app/main/default/objects/Account/validationRules/Tipo_de_UDC_para_Genero.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_de_UDC_para_Genero</fullName>
    <active>true</active>
    <description>El campo genero solo puede almacenar UDC&apos;s de tipo Genero</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Genero_UDC__pc)),
Genero_UDC__pr.RecordType.DeveloperName != &apos;Genero&apos;
)</errorConditionFormula>
    <errorDisplayField>Genero_UDC__pc</errorDisplayField>
    <errorMessage>El campo género debe llenarse con un UDC de Género</errorMessage>
</ValidationRule>